--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node index.js",
+  "build": "echo 'No build step required'"
+  }
+
+  
   "author": "",
   "license": "ISC",
   "description": "",
